welcome cutoff fixed

--- a/secure-teams/client/src/styles/welcome.css
+++ b/secure-teams/client/src/styles/welcome.css
@@ -26,7 +26,7 @@ body {
   padding: 180px 100px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   z-index: 300;
-  height: 100vh;
+  height: 120vh;
   width: 40%;
 }
 
